---------------------------------------------------------------------------------------------------
Version: 0.3.0
Date: ???
  Minor Features:
    - Updated to Factorio 1.0
    - Code cleanup.
---------------------------------------------------------------------------------------------------
Version: 0.2.9
Date: 08. 05. 2020
  Minor Features:
    - When all spawn chances are set to 1, now all types of ruins will spawn, instead of just small ruins.
    - Code cleanup.
---------------------------------------------------------------------------------------------------
Version: 0.2.8
Date: 28. 04. 2020
  Minor Features:
    - Added license file.
    - Added changelog file.
---------------------------------------------------------------------------------------------------
Version: 0.2.7
Date: 25. 01. 2020
  Minor Features:
    - Updated for 0.18.
---------------------------------------------------------------------------------------------------
Version: 0.2.6
Date: 03. 11. 2019
  Minor Features:
    - Better compatibility with mods, including AAI vehicles.
---------------------------------------------------------------------------------------------------
Version: 0.2.5
Date: 27. 04. 2019
  Bugfixes:
    - Fixed that ruins could spawn in space when using the Space Exploration mod.
---------------------------------------------------------------------------------------------------
Version: 0.2.4
Date: 30. 03. 2019
  Minor Features:
    - Added more small ruins.
    - Changed entity building to raise events.
---------------------------------------------------------------------------------------------------
Version: 0.2.3
Date: 12. 03. 2019
  Minor Features:
    - Added thumbnail.
---------------------------------------------------------------------------------------------------
Version: 0.2.2
Date: 12. 03. 2019
  Major Features:
    - Updated to 0.17.
---------------------------------------------------------------------------------------------------
Version: 0.2.1