@@ -1,0 +1,2 @@
+scenario-name=Ruins Debug
+description=Spawns all possible ruins from the ruins mod. Intended only for debugging the mod, not for normal gameplay.
